<resources>
    <string name="app_name">HastaneRandevuSistemi</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="ui_register">UI Register</string>

    <string name="registerr">REGISTER</string>

    <string name="loginn">LOGIN</string>
    <string name="ui_login">UI Login</string>
    <string name="signout">SignOut</string>
    <string name="_21_12_2021">21.12.2021</string>
    <string name="_20_12_2021">20.12.2021</string>
    <string name="_19_12_2021">19.12.2021</string>
    <string name="_18_12_2021">18.12.2021</string>
    <string name="_17_12_2021">17.12.2021</string>


</resources>